# tflops

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  build.sh
.github/workflows/: build.yml
api/: db.go  go.mod  go.sum  main.go  models.go  tflops-api.service
api/seed/: main.go
docs/: PRIVACY.md  SCHEMA.md
plugin/: Cargo.toml
plugin/src/: bench.rs  cpu.rs  gpu.rs  main.rs  matmul.wgsl  matmul_f16.wgsl  score.rs
website/: package-lock.json  package.json
website/public/: install.ps1  install.sh
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/report/: page.tsx
website/src/app/report/[id]/: page.tsx
website/src/components/: Globe3D.tsx  GlobeMap.tsx  HistoryChart.tsx  Leaderboard.tsx  NetworkMap.tsx  RegistryLabel.tsx  Sidebar.tsx  StatsGrid.tsx
website/src/lib/: centroids.ts
