[package]
name    = "tflops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tflops"
path = "src/main.rs"

[dependencies]
sysinfo      = "0.30"
rayon        = "1.8"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap         = { version = "4", features = ["derive"] }
chrono       = "0.4"
sha2         = "0.10"
wgpu         = { version = "0.19", features = ["naga", "wgsl"] }
pollster     = "0.3"
indicatif    = "0.17"
dotenvy      = "0.15"

[features]
default = []
nvidia  = ["nvml-wrapper"]
apple   = ["metal"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.27", optional = true }

[dependencies.nvml-wrapper]
version = "0.9"
optional = true
